# Caliber

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/models/9mm/: license.txt  scene.gltf
assets/models/G19/: license.txt  scene.gltf
assets/models/gun_2/: license.txt  scene.gltf
assets/models/gun_3/: service_pistol_2k.gltf
assets/models/m19/: license.txt  scene.gltf
shaders/: basic.frag  basic.vert  pbr.frag  pbr.vert
src/: main.cpp
src/animation/: AnimationController.cpp  AnimationController.h
src/core/: Types.h  UI.cpp  UI.h
src/renderer/: Buffer.cpp  Buffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h
src/scene/: Camera.cpp  Camera.h  Viewmodel.cpp  Viewmodel.h
